[BeOS] bug 236446 Fix for windows activation endless loop, review=simontaylor2, no sr required(port-only), approval=dbaron